@@ -1,3 +1,7 @@
+2000-06-14  Tim Jenness  <timj@jach.hawaii.edu>
+
+	* Basic.pm: Use Starlink::Versions
+
 2000-05-25  Tim Jenness  <timj@jach.hawaii.edu>
 
 	* Display/GAIA.pm (new): Add use_remote_gaia and special case kauwa 
